--- a/NetLib/NetLib.csproj
+++ b/NetLib/NetLib.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Tcp\TcpListener.cs" />
     <Compile Include="Tcp\TcpNetwork.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tcp\TcpStream.cs" />
     <Compile Include="Udp\UdpReceiver.cs" />
     <Compile Include="Udp\UdpSender.cs" />
   </ItemGroup>
